# ffreis-integration-hub

./: .gitignore  Makefile  README.md  lefthook.yml  pyproject.toml  sonar-project.properties
.github/workflows/: devops-pr-hygiene.yml  devops-security.yml  gitleaks.yml  grype-fs.yml  onnx-runner-comparison.yml  secret-scan.yml  shellcheck.yml  stock-sim-dashboard-compat.yml  weekly-parity.yml
config/: repos.json
examples/: docker-compose.converter-serving-parity-grpc.yml  docker-compose.converter-serving-parity.yml
scripts/: bench_compare_grpc.py  bench_compare_http.py  compose.sh  convert_and_prepare.py  convert_and_prepare_grpc.py  weekly_check.py
scripts/shims/: docker
