[project]
name = "ffreis-integration-hub"
version = "0.1.0"
requires-python = ">=3.12"
description = "Cross-repository integration and parity testing harness"
dependencies = [
    "onnx>=1.15.0",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "RUF"]
# E501: line too long (formatter enforces line-length separately)
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=check_ml_component_contracts",
    "--cov=check_feature_contract",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]
